Hoàng Nhi - Thêm trang hiển thị bạn bè và lời mời tham gia nhóm
New features
- Tab Bạn bè (Friendship):
+ Scroll vô hạn
+ Tìm kiếm
- Tab Lời mời tham gia nhóm (GroupRequest):
+ Scroll vô hạn
+ Tìm kiếm
+ Từ chối sẽ cập nhật trạng thái request từ 0 -> 2 và rerender lại tab GroupRequest
+ Chấp nhận sẽ cập nhật trạng thái request từ 0 -> 1, rerender lại tab GroupRequest và chuyển sang trang của nhóm
+ Signalr:
Tạo request sẽ rerender tab grouprequest của receiver
Refresh lại tab conversation
Refresh lại tab message
+ Vẫn sẽ hiển thị người đã được gửi lời mời nhưng nếu có thì chỉ update lại ngày sửa

--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -325,6 +325,7 @@
         GetProfilePicture();
         renderTabFriendRequest(false);
         renderTabFriendship(false)
+        renderTabGroupRequest(false);
     });
 
     // Hiển thị
@@ -559,6 +560,18 @@
                 showLoading(false)
             }
             $("#pills-friend").html(data)
+        });
+    }
+
+    function renderTabGroupRequest(isLoading = false) {
+        if (isLoading) {
+            showLoading(true)
+        }
+        $.get('grouprequest', function (data) {
+            if (isLoading) {
+                showLoading(false)
+            }
+            $("#pills-group-request").html(data)
         });
     }
 </script>
