Hoàng Nhi - Thêm trang hiển thị nhóm hiện tại
New features
- Tab Group
+ Scroll vô hạn
+ Tìm kiếm
+ Click vào sẽ chuyển đến màn hình nhắn tin
+ Chấp nhận tham gia nhóm - tab GroupRequest:
> Current User:  Refresh lại tab group
> Các thành viên khác trong nhóm: Rerender lại tab group cho các thành viên trong nhóm

--- a/FE/Views/Home/Contact/GroupRequest/_TabGroupRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/GroupRequest/_TabGroupRequestPartial.cshtml
@@ -264,7 +264,10 @@
                     // Refresh GroupRequest
                     getListPaginggroupRequest(null, null, true, () => { showLoading(false) })
 
-                    // Rerender Conversation
+                    // Refresh Group
+                    GetListPagingGroup(groupPageIndex, groupRowPerPage, true);
+
+                    // Refresh Conversation
                     GetListPagingConversation(PageIndexConversation, RowPerPageConversation, () =>
                     {
                         // Chuyển sang tab message
@@ -279,6 +282,7 @@
                             GroupId: response.data.groupId
                         }
                         connection.invoke("RequestRerenderTabOfGroupMember", data);
+
                     })
                 }
             },
