--- a/FE/Views/Shared/ConfigProfile/_ProfilePicture.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_ProfilePicture.cshtml
@@ -11,7 +11,7 @@
          class="rounded-circle"
          src="@Model.ProfilePicture"
          width="32" height="32"
-         style="margin: 0 6px; object-fit: cover" />
+         style="margin: 0 6px; object-fit: cover; box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;" />
     <span id="Name-ProfilePicture"
           style="text-transform: none; font-size: 14px; font-weight: 500; color: black">@Model.Ten</span>
 </button>
